FELIX-6759 - PROTOTYPE: use plurl as the URL factory mechanism
Addresses the review on PR #552 and makes plurl the mechanism rather than an
illustration alongside the existing one.

Vendored sources refreshed from upstream. Every file is now Apache-2.0
(eclipse-osgi-technology/plurl#45 corrected headers that were EPL-2.0 by oversight,
which apache-rat rightly rejected) and includes the fix from
eclipse-osgi-technology/plurl#55. Only the package rename is applied.

The prototype could not have worked as written:

- Plurl.install(..) was never called. The static Plurl.add(..) helpers operate through
  a plurl: URL, so without installing the router first they fail with "unknown
  protocol: plurl". Nothing exercised the adapter, so it compiled and the tests passed
  while being dead code.
- shouldHandle only checked that a class came from some Felix bundle class loader. Two
  frameworks in one JVM both load classes that way, so one framework could answer
  lookups for a bundle resolved in another. It now also requires the owning framework
  to match, as Equinox does.

Plurl is now the only mechanism, matching Equinox rather than keeping a fallback:

- URLHandlers no longer swaps the java.net.URL and URLConnection static fields, and
  its singleton is no longer constructed. Keeping that as a fallback would have kept
  the sun.misc.Unsafe path alive, which is what adopting plurl is meant to remove.
  Equinox does not fall back either: if plurl registration fails it logs and that
  framework contributes no URL handlers.
- Removing the swap turned out to be necessary rather than merely tidy. With
  URLHandlers taking the singletons first, plurl found them occupied and required
  --add-opens java.base/java.net to replace them. Installing into a clean JVM uses the
  supported API and needs no flag.
- URLHandlersBundleStreamHandler and URLHandlersStreamHandlerProxy now extend
  PlurlStreamHandlerBase, exactly as Equinox changed BundleResourceHandler and
  URLStreamHandlerProxy